--- a/page2.html
+++ b/page2.html
@@ -66,11 +66,6 @@
     .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
     .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
     .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
-    .chocolate-chip:nth-child(6) { width: 25px; height: 25px; top: 40%; left: 30%; }
-    .chocolate-chip:nth-child(7) { width: 18px; height: 18px; top: 65%; left: 75%; }
-    .chocolate-chip:nth-child(8) { width: 26px; height: 26px; top: 35%; left: 55%; }
-    .chocolate-chip:nth-child(9) { width: 20px; height: 20px; top: 85%; left: 25%; }
-    .chocolate-chip:nth-child(10) { width: 15px; height: 15px; top: 25%; left: 50%; }
 
     .dim-background {
       position: absolute;
@@ -99,6 +94,32 @@
       padding: 20px;
       text-align: center;
       color: black;
+    }
+
+    footer {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
+    }
+
+    .footer-button {
+      color: white;
+      background: transparent;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+
+    .footer-button:hover {
+      text-decoration: underline;
     }
 
     .upgrade-line {
@@ -132,32 +153,6 @@
     .upgrade-button:hover {
       background-color: #003f7a;
     }
-
-    footer {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
-      position: absolute;
-      bottom: 0;
-    }
-
-    .footer-button {
-      color: white;
-      background: transparent;
-      border: none;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
-    }
-
-    .footer-button:hover {
-      text-decoration: underline;
-    }
   </style>
 </head>
 <body>
@@ -175,30 +170,47 @@
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
       <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
-      <div class="chocolate-chip"></div>
     </div>
+  </div>
 
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
-        <p>clicks</p>
+        <p>Upgrade clicks:</p>
         <p>plus one cookie per click</p>
       </div>
       <button class="upgrade-button" id="shopUpgradeButton">10 🍪</button>
     </div>
   </div>
 
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special upgrades and bonuses will be displayed here!</p>
+  </div>
+
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Your game statistics will be shown here!</p>
+  </div>
+
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Additional settings and options.</p>
+  </div>
+
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
+    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
+    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
+    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
+    let score = 0;
+    let clickBonus = 0;
+
     async function openDatabase() {
       const request = indexedDB.open('cookieClickerDB', 1);
       return new Promise((resolve, reject) => {
@@ -223,13 +235,6 @@
       });
     }
 
-    async function updateScore(value) {
-      const db = await openDatabase();
-      const transaction = db.transaction('scores', 'readwrite');
-      const store = transaction.objectStore('scores');
-      store.put({ id: 1, value });
-    }
-
     async function getClickBonus() {
       const db = await openDatabase();
       const transaction = db.transaction('scores', 'readonly');
@@ -240,6 +245,13 @@
       });
     }
 
+    async function updateScore(value) {
+      const db = await openDatabase();
+      const transaction = db.transaction('scores', 'readwrite');
+      const store = transaction.objectStore('scores');
+      store.put({ id: 1, value });
+    }
+
     async function updateClickBonus(value) {
       const db = await openDatabase();
       const transaction = db.transaction('scores', 'readwrite');
@@ -247,47 +259,51 @@
       store.put({ id: 2, value });
     }
 
-    async function incrementScore() {
-      score += clickBonus + 1;
-      document.getElementById('score').textContent = score;
-      await updateScore(score);
-    }
-
-    async function applyUpgrade() {
-      if (score >= 10) {
-        score -= 10;
-        clickBonus++;
-        document.getElementById('score').textContent = score;
-        await updateScore(score);
-        await updateClickBonus(clickBonus);
-      }
-    }
-
-    async function initialize() {
+    async function loadGame() {
       score = await getScore();
       clickBonus = await getClickBonus();
-      document.getElementById('score').textContent = score;
+      document.getElementById('score').innerText = score;
+    }
+
+    function incrementScore() {
+      score += 1 + clickBonus;
+      document.getElementById('score').innerText = score;
+      updateScore(score);
+    }
+
+    async function buyUpgrade() {
+      const cost = 10;
+      if (score >= cost) {
+        score -= cost;
+        clickBonus += 1;
+        document.getElementById('score').innerText = score;
+        await updateScore(score);
+        await updateClickBonus(clickBonus);
+        alert("Upgrade purchased! Your clicks now give more cookies.");
+      } else {
+        alert("Not enough cookies to buy this upgrade!");
+      }
     }
 
     function toggleGUI(guiId) {
-      const gui = document.getElementById(guiId);
+      const allGUIs = ['storeGUI', 'specialGUI', 'statsGUI', 'miscGUI'];
       const dimBackground = document.getElementById('dimBackground');
-      const isVisible = gui.style.display === 'block';
-
-      document.querySelectorAll('.gui').forEach(gui => gui.style.display = 'none');
-      dimBackground.style.display = 'none';
-
-      if (!isVisible) {
-        gui.style.display = 'block';
-        dimBackground.style.display = 'block';
-      }
+      allGUIs.forEach(id => {
+        const gui = document.getElementById(id);
+        if (id === guiId && gui.style.display === 'none') {
+          gui.style.display = 'block';
+          dimBackground.style.display = 'block';
+        } else {
+          gui.style.display = 'none';
+        }
+      });
+      dimBackground.style.display = allGUIs.some(id => document.getElementById(id).style.display === 'block') ? 'block' : 'none';
     }
 
-    let score = 0;
-    let clickBonus = 0;
-    initialize();
+    document.getElementById('shopUpgradeButton').addEventListener('click', buyUpgrade);
 
-    document.getElementById('shopUpgradeButton').addEventListener('click', applyUpgrade);
+    // Load the game state on page load
+    window.onload = loadGame;
   </script>
 </body>
 </html>
