--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,158 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cookie Clicker Game</title>
   <style>
-    /* (Same styles as before, unchanged for brevity) */
+    body {
+      background-image: linear-gradient(to bottom, #00509E, #001F54);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+      color: white;
+      overflow: hidden;
+    }
+
+    .counter-box {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      text-align: center;
+      padding: 10px;
+      font-size: 1.5em;
+      font-weight: bold;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    .game-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      flex-grow: 1;
+    }
+
+    .click-circle {
+      width: 300px;
+      height: 300px;
+      background-color: #8B4513;
+      border-radius: 50%;
+      position: relative;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      cursor: pointer;
+      transition: transform 0.1s ease-in-out;
+      outline: none;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    .click-circle:active {
+      transform: scale(0.95);
+    }
+
+    .chocolate-chip {
+      position: absolute;
+      background-color: #3E2723;
+      border-radius: 50%;
+      pointer-events: none;
+      box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
+    }
+
+    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
+    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
+    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
+    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
+
+    .dim-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0);
+      display: none;
+      z-index: 9;
+      pointer-events: none;
+    }
+
+    .gui {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      height: 60%;
+      background-color: rgba(255, 255, 255, 0.9);
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+      display: none;
+      z-index: 20;
+      border-radius: 10px;
+      padding: 20px;
+      text-align: center;
+      color: black;
+    }
+
+    footer {
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 10px 0;
+      box-shadow: 0px -2px 4px rgba(0, 0, 0, 0.5);
+      position: absolute;
+      bottom: 0;
+    }
+
+    .footer-button {
+      color: white;
+      background: transparent;
+      border: none;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+      text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.8);
+    }
+
+    .footer-button:hover {
+      text-decoration: underline;
+    }
+
+    .upgrade-line {
+      border-top: 1px solid black;
+      margin-top: 20px;
+      padding-top: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .upgrade-line p {
+      margin: 0;
+    }
+
+    .upgrade-line p:first-child {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+
+    .upgrade-button {
+      padding: 5px 15px;
+      background-color: #00509E;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 1em;
+      border-radius: 5px;
+    }
+
+    .upgrade-button:hover {
+      background-color: #003f7a;
+    }
   </style>
 </head>
 <body>
