--- a/page2.html
+++ b/page2.html
@@ -148,6 +148,13 @@
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
     <p>Buy upgrades and items here!</p>
+    <div class="upgrade-line">
+      <div>
+        <p>Upgrade clicks:</p>
+        <p>plus one cookie per click</p>
+      </div>
+      <button class="upgrade-button" id="shopUpgradeButton" onclick="buyUpgrade()">10 🍪</button>
+    </div>
   </div>
 
   <div class="gui" id="specialGUI">
@@ -174,35 +181,76 @@
   </footer>
 
   <script>
-    let openGUI = null;
+    let score = 0;
+    let clickBonus = 1;
 
-    function toggleGUI(guiID) {
-      const guiElement = document.getElementById(guiID);
-      const dimBackground = document.getElementById("dimBackground");
+    async function openDatabase() {
+      return new Promise((resolve, reject) => {
+        const request = indexedDB.open('cookieClickerDB', 1);
+        request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
+        request.onupgradeneeded = (event) => {
+          const db = event.target.result;
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
+        };
+      });
+    }
 
-      if (openGUI && openGUI !== guiElement) {
-        openGUI.style.display = "none";
-      }
+    async function saveScore() {
+      const db = await openDatabase();
+      const tx = db.transaction('scores', 'readwrite');
+      const store = tx.objectStore('scores');
+      store.put({ id: 'score', value: score });
+      store.put({ id: 'clickBonus', value: clickBonus });
+      return tx.complete;
+    }
 
-      if (guiElement.style.display === "none" || guiElement.style.display === "") {
-        guiElement.style.display = "block";
-        dimBackground.style.display = "block";
-        openGUI = guiElement;
-      } else {
-        guiElement.style.display = "none";
-        dimBackground.style.display = "none";
-        openGUI = null;
-      }
+    async function loadScore() {
+      const db = await openDatabase();
+      const tx = db.transaction('scores', 'readonly');
+      const store = tx.objectStore('scores');
+      const storedScore = await store.get('score');
+      const storedClickBonus = await store.get('clickBonus');
+      score = storedScore?.value || 0;
+      clickBonus = storedClickBonus?.value || 1;
+      document.getElementById('score').innerText = score;
     }
 
     function incrementScore() {
-      const score = document.getElementById('score');
-      score.innerText = parseInt(score.innerText) + 1;
+      score += clickBonus;
+      document.getElementById('score').innerText = score;
+      saveScore();
     }
 
-    function resetGame() {
-      document.getElementById('score').innerText = '0';
+    function toggleGUI(guiID) {
+      const guis = document.querySelectorAll('.gui');
+      guis.forEach(gui => {
+        gui.style.display = gui.id === guiID ? (gui.style.display === 'block' ? 'none' : 'block') : 'none';
+      });
     }
+
+    async function resetGame() {
+      score = 0;
+      clickBonus = 1;
+      document.getElementById('score').innerText = score;
+      await saveScore();
+    }
+
+    async function buyUpgrade() {
+      if (score >= 10) {
+        score -= 10;
+        clickBonus++;
+        document.getElementById('score').innerText = score;
+        await saveScore();
+      } else {
+        alert('Not enough cookies!');
+      }
+    }
+
+    // Load the saved score on page load
+    window.onload = loadScore;
   </script>
 </body>
 </html>
