--- a/page2.html
+++ b/page2.html
@@ -71,6 +71,18 @@
     .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
     .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
 
+    .dim-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: none;
+      z-index: 9;
+      pointer-events: none;
+    }
+
     .gui {
       position: absolute;
       top: 50%;
@@ -117,6 +129,8 @@
 </head>
 <body>
 
+  <div class="dim-background" id="dimBackground"></div>
+
   <div class="counter-box">
     <span id="score">0</span> cookies
   </div>
@@ -143,8 +157,29 @@
     </div>
   </div>
 
+  <div class="gui" id="specialGUI">
+    <h2>Special</h2>
+    <p>Special upgrades and bonuses will be displayed here!</p>
+    <button onclick="specialAccess()">Special Access</button>
+    <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
+  </div>
+
+  <div class="gui" id="statsGUI">
+    <h2>Stats</h2>
+    <p>Your game statistics will be shown here!</p>
+  </div>
+
+  <div class="gui" id="miscGUI">
+    <h2>Misc</h2>
+    <p>Additional settings and options.</p>
+    <button onclick="resetGame()">Reset Game</button>
+  </div>
+
   <footer>
     <button class="footer-button" onclick="toggleGUI('storeGUI')">Store</button>
+    <button class="footer-button" onclick="toggleGUI('specialGUI')">Special</button>
+    <button class="footer-button" onclick="toggleGUI('statsGUI')">Stats</button>
+    <button class="footer-button" onclick="toggleGUI('miscGUI')">Misc</button>
   </footer>
 
   <script>
@@ -206,6 +241,26 @@
     function toggleGUI(guiID) {
       document.getElementById(guiID).style.display =
         document.getElementById(guiID).style.display === 'none' ? 'block' : 'none';
+    }
+
+    async function resetGame() {
+      score = 0;
+      clickBonus = 1;
+      document.getElementById('score').innerText = score;
+      await saveScore();
+      alert('Game has been reset!');
+    }
+
+    function specialAccess() {
+      if (score >= 10000) {
+        score -= 10000;
+        document.getElementById('score').innerText = score;
+        saveScore();
+        const specialCode = Math.floor(1000000 + Math.random() * 9000000); // Generate 7-digit code
+        document.getElementById('specialCode').innerText = `Your special code: ${specialCode}`;
+      } else {
+        alert('You need at least 10000 cookies for special access');
+      }
     }
 
     window.onload = loadScore;
