--- a/page2.html
+++ b/page2.html
@@ -159,7 +159,7 @@
 
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
-    <p>Special password will be at a price of 10000 cookies</p>
+    <p>The Special password will cost you 10000 cookies</p>
     <button onclick="specialAccess()">Special Access</button>
     <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
   </div>
