--- a/page2.html
+++ b/page2.html
@@ -152,6 +152,7 @@
         <p>+1 cookie per click</p>
       </div>
       <button class="footer-button" onclick="buyUpgrade()">10 🍪</button>
+      <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
     </div>
   </div>
 
